fixed blogContainer horizontal scrollbar glitch

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -182,6 +182,7 @@
 
     max-height: 70vh; /* make smaller to make full 'about window' show up on devices smaller than my iPhone 12 */
     overflow-y: auto;
+    overflow-x: hidden;
 
     /* DARK GREY THEME BACKGROUND */
     /* background-color: rgba(32, 32, 32, 0.9); */
@@ -190,21 +191,21 @@
     /* border: 3px solid rgb(255, 255, 255); */
 }
 
-#aboutContainer::-webkit-scrollbar {
+#aboutContainer::-webkit-scrollbar, #blogPostContainer::-webkit-scrollbar {
     width:10px;
     height: 8px;
 }
 
-#aboutContainer::-webkit-scrollbar:hover {
+#aboutContainer::-webkit-scrollbar:hover, #blogPostContainer::-webkit-scrollbar:hover {
     cursor: pointer;
 }
 
-#aboutContainer::-webkit-scrollbar-track {
+#aboutContainer::-webkit-scrollbar-track, #blogPostContainer::-webkit-scrollbar-track {
     /* background: transparent; */
     background: rgba(255, 255, 255, 0);
 }
 
-#aboutContainer::-webkit-scrollbar-thumb {
+#aboutContainer::-webkit-scrollbar-thumb, #blogPostContainer::-webkit-scrollbar-thumb {
     background-color: #888;
     border-radius: 10px;
 }
